task popup scrollbar fix

--- a/css/board.css
+++ b/css/board.css
@@ -427,7 +427,7 @@ button {
   /* min-height:726px; */
   max-width: 525px;
   width: 100%;
-  padding: 32px 24px;
+  padding: 32px 0px;
   background-color: var(--color-white);
   border-radius: 30px;
   box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.16);
@@ -464,6 +464,7 @@ button {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin: 0 24px;
 }
 
 .popup-task-main {
@@ -471,13 +472,14 @@ button {
   flex-direction: column;
   gap: 16px;
   overflow-y: scroll;
-  margin-right: 4px;
+  margin: 0 12px 0 24px;
+  padding: 0px 4px 0 0;
 }
 
 .popup-task-edit-main {
   overflow-y: scroll;
-  margin: 0 12px;
-  padding: 0 8px;
+  margin: 0 12px 0 24px;
+  padding: 0px 4px 0 0;
   display: flex;
   flex-direction: column;
   gap: 16px;
@@ -589,6 +591,7 @@ button {
   align-items: center;
   justify-content: end;
   gap: 8px;
+  margin: 0 24px;
 }
 
 .popup-task-footer button {
@@ -670,7 +673,7 @@ input::-webkit-calendar-picker-indicator {
   display: flex;
   flex-direction: column;
   gap: 16px;
-  overflow: scroll;
+  overflow: auto;
 }
 
 /* Category */
